fix(css): added font-display to prevent invisible text since webfont

--- a/source/css/helpers/_mixins.scss
+++ b/source/css/helpers/_mixins.scss
@@ -67,6 +67,7 @@
     src: $src;
     font-weight: $weight;
     font-style: $style;
+    font-display: swap;
     unicode-range: $range;
   }
 }
